# PhoenixRooivalk

./: .continuerules  .cursorrules  .eslintrc.js  .gitattributes  .gitignore  .markdownlint.json  .prettierignore  .prettierrc  .windsurfrules  ACCESS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  GAME_IMPROVEMENTS_TODO.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PHOENIX_ROOIVALK_BRAND_TODOS.md  PhoenixRooivalk_Pitch_Deck.md  README.md  REFACTORING_SUMMARY.md  RESPONSIBLE_USE.md  SECURITY.md  THREAT_SIMULATOR_IMPROVEMENTS_ROADMAP.md  UI_IMPROVEMENTS_SUMMARY.md  USER_TODO.md  VISUAL_IMPROVEMENTS_GUIDE.md  WASM_EMBEDDING_SUMMARY.md  _config.yml  ai_linting_interactions.db  blockchain_outbox.sqlite3  clippy.toml  cspell.json  dev-setup.md  fix_mdx_errors.ps1  fix_rust_formatting.sh  index.md  issue_queue.db  mypy.ini  package-lock.json  package.json  (+4 more)
.cursor/rules/: countermeasure-algorithms.mdc  detection-systems.mdc  module-integration.mdc
.giga/: specifications.json
.giga/rules/: countermeasure-algorithms.mdc  detection-systems.mdc  module-integration.mdc
.github/: SECRETS_SETUP.md  WORKFLOW_IMPROVEMENTS.md  codeql-config.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: ci-marketing.yml  ci-python.yml  ci-rust.yml  codeql.yml  deploy-docs-site.yml  deploy-marketing-site.yml
.windsurf/rules/: countermeasure-algorithms.md  detection-systems.md  module-integration.md
apps/api/: Cargo.toml
apps/api/docs/: DATABASE_PATTERNS.md
apps/api/src/: connection.rs  db.rs  handlers.rs  lib.rs  main.rs  migrations.rs  models.rs  repository.rs
apps/api/tests/: app_setup_tests.rs  doc_tests.rs  endpoint_handlers.rs  evidence_creation_tests.rs  evidence_retrieval_tests.rs  http_evidence.rs
apps/docs/: .eslintrc.js  .markdownlint.json  .prettierignore  CUSTOMER_FACING_DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_REQUIREMENTS_CHECKLIST.md  README.md  docusaurus.config.ts  eslint.config.js  package-lock.json  package.json  sidebars.ts  tsconfig.build.json  tsconfig.json
apps/evidence-cli/: Cargo.toml
apps/keeper/: Cargo.toml
apps/keeper/src/: config.rs  lib.rs  main.rs
apps/keeper/tests/: core_functions.rs  db_evidence.rs  integration_tests.rs
apps/marketing/: .prettierignore  IMPLEMENTATION_SUMMARY.md  MARKETING_SITE_IMPROVEMENTS.md  OG_IMAGE_GENERATION.md  PHOENIX_ROOIVALK_BRAND_TODOS.md  QUICK_WINS.md  README_IMPROVEMENTS.md  REUSABLE_SYSTEMS_ARCHITECTURE.md  SITEMAP_SUBMISSION_GUIDE.md  THREAT_SIMULATOR_IMPROVEMENTS_ROADMAP.md  VISUAL_IMPROVEMENTS.md  WASM_INTEGRATION.md  eslint.config.mjs  next.config.js  next.config.mjs  (+6 more)
apps/threat-simulator-desktop/: .gitignore  BUILD_SUCCESS.md  COMPLETE.md  COMPONENTS.md  CSP_SECURITY.md  Cargo.toml  FINAL_SUMMARY.md  FRONTEND.md  LAUNCH_GUIDE.md  MIGRATION.md  QUICKSTART.md  README.md  STATUS.md  TESTING.md  Trunk.toml  USAGE.md  index.html  justfile  package.json
apps/threat-simulator-desktop/public/: styles.css
apps/threat-simulator-desktop/src/: components.rs  game.rs  lib.rs  main.rs  tauri_api.rs
apps/threat-simulator-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/threat-simulator-desktop/src-tauri/src/: main.rs
apps/threat-simulator-desktop/src/components/: cooldown_meter.rs  drone_deployment.rs  energy_management.rs  event_feed.rs  game_canvas.rs  hud.rs  loading.rs  overlays.rs  research_panel.rs  stats_panel.rs  synergy_system.rs  token_store.rs  weapon_panel.rs
apps/threat-simulator-desktop/src/game/: auto_targeting.rs  engine.rs  formations.rs  particles.rs  physics.rs  types.rs  waves.rs  weapons.rs
backend/: __init__.py
docs/: DOCUMENTATION_FINALIZATION_PLAN.md  ENVIRONMENT_VALIDATION.md  README.md  blockchain_integration.md  civilian_use_cases.md  competitor_analysis.md  emerging_trends_opportunities.md  executive_summary.md  financial_projections.md  glossary.md  implementation-plan.md  marketing_and_risk_analysis.md  technical_overview.md
docs-site/: docusaurus.config.ts  netlify.toml  package-lock.json  package.json  sidebars.ts
public/: Phoenix-Rooivalk-Technical-Whitepaper.md
scripts/: Invoke-OutboxWorker.ps1  Invoke-Tests.ps1  deploy.sh  setup-branch-protection.ps1  validate-env.sh
tests/: workspace_integration.rs
(+726 files in other folders)
