[workspace]
resolver = "2"
members = [
  "apps/api",
  "apps/keeper",
  "apps/evidence-cli",
  "apps/threat-simulator-desktop/src-tauri",
  "crates/evidence",
  "crates/anchor-etherlink",
  "crates/anchor-solana",
  "crates/address-validation",
  "crates/phoenix-common",
]

[workspace.package]
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"