[package]
name = "threat-simulator-desktop"
version = "0.1.0"
description = "Phoenix Rooivalk Threat Simulator - Desktop Application"
authors = ["Phoenix Rooivalk Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "KeyboardEvent",
    "MouseEvent",
    "Touch",
    "TouchList",
    "TouchEvent",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
rand = "0.8"

# Game engine dependencies
nalgebra = "0.32"
rapier2d = { version = "0.17", features = ["wasm-bindgen"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

